# timeline

./: .env  .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  atlas.hcl  build.rs  config.github-actions.toml  config.toml  db_init.sh  flake.nix  release-please-config.json  release-plz.toml
.github/workflows/: pull_request.yml  push_main.yml  release.yml
.sqlx/: query-0403a3d78b5a19d92581b9b4655df61f6b4fcc4f03506f2bc119cb0f0be8817e.json  query-f8c5f9d3fc289fa77e3f3d357bc27c1f54727904c50081b034aed924945fb6cc.json  query-fb12bebdfc92619130cc7d0db75712e5863644e147441fe088dcc074b84c2d53.json
schema/: documents.hcl  users.hcl
src/: html.rs  integration.rs  integration_config.rs  main.rs
src/integrations/: mod.rs  paperless_ngx.rs
tailwind/: input.css
timeline-server/: CHANGELOG.md  Cargo.toml
timeline-server/schema/: schema.sql
timeline-server/src/: auth.rs  integration.rs  integration_config.rs  main.rs
timeline-server/src/integrations/: paperless_ngx.rs
timeline-server/static/: tailwind.css
