[package]
name = "timeline"
version = "0.0.1"
edition = "2021"
description = "Hello World with OIDC auth"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
async-stream = "0.3.5"
axum = "0.7.3"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.12", features = ["derive", "env"]}
futures = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"

# Waiting on a release of maud to have axum 0.7 compat
# maud = { version = "0.25.0", features = ["axum"] }
maud = { git = "https://github.com/lambda-fairy/maud.git", rev="320add8", features = ["axum"] }

once_cell = "1.19.0"
openidconnect = "3.4.0"
reqwest = { version = "0.11.23", features = ["tokio-rustls", "serde_json", "rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
service_conventions = "0.0.1"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
tonic = { version = "0.10.2", features = ["tls", "tls-roots"] }
tower-cookies = { version = "0.10.0", features = ["signed", "private"]}
tower-http = { version = "0.5.0", features = ["tracing", "trace"] }
tracing = "0.1.40"
url = "2.5.0"
