[package]
name = "timeline-service"
version = "0.0.3"
edition = "2021"
description = "A personal timeline"
license = "Apache-2.0"

[[bin]]
name = "timeline"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-stream = "0.3.5"
axum = "0.7.4"
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive", "env"]}
futures = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"

sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono"] }

# Waiting on a release of maud to have axum 0.7 compat
# maud = { version = "0.25.0", features = ["axum"] }
maud = { version="0.26.0", features = ["axum"] }

once_cell = "1.19.0"
openidconnect = "3.4.0"
reqwest = { version = "0.11.24", features = ["tokio-rustls", "serde_json", "rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
service_conventions = "0.0.1"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full", "rt"] }
toml = "0.8.10"
tonic = { version = "0.10.2", features = ["tls", "tls-roots"] }
tower-cookies = { version = "0.10.0", features = ["signed", "private"]}
tower-http = { version = "0.5.1", features = ["tracing", "trace"] }
tracing = "0.1.40"
url = "2.5.0"
pretty_date = "0.1.2"
