[package]
name = "timeline-server"
version = "0.0.10"
edition = "2021"
description = "A personal timeline"
license = "Apache-2.0"

[[bin]]
name = "timeline"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-stream = "0.3.5"
axum = {version = "0.7.5", features = ["macros"]}
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "env"]}
futures = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"

sqlx = { version = "0.8.0", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono"] }

# Waiting on a release of maud to have axum 0.7 compat
# maud = { version = "0.25.0", features = ["axum"] }
maud = { version="0.26.0", features = ["axum"] }

once_cell = "1.19.0"
openidconnect = "3.5.0"
reqwest = { version = "0.12.5", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
service_conventions = { version = "0.0.23", features = ["tracing", "oidc"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full", "rt"] }
toml = "0.8.12"
tonic = { version = "0.12.0", features = ["tls", "tls-roots"] }
tower-cookies = { version = "0.10.0", features = ["signed", "private"]}
tower-http = { version = "0.6.0", features = ["tracing", "trace"] }
tracing = "0.1.40"
url = "2.5.0"
pretty_date = "0.1.2"

declare_schema = { version = "0.0.9" }
extism = "1.4.1"
axum-embed = "0.1.0"
rust-embed = "8.4.0"
http = "1.1.0"
